syntax = "proto3";
package hyle.zktx.v1;

option go_package = "github.com/hyle-org/hyle/x/zktx";

import "hyle/zktx/v1/types.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

// Msg defines the module Msg service.
service Query {
  // Contract returns the current state of the contract.
  rpc Contract(ContractRequest) returns (ContractResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/hyle/zktx/v1/contract/{contract_name}";
  }

  // ContractList returns the list of all contracts with a given verifier and
  // program_id
  rpc ContractList(ContractListRequest) returns (ContractListResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/hyle/zktx/v1/contracts";
  }

  // SettlementStatus returns whether a TX has been settled or not
  rpc SettlementStatus(SettlementStatusRequest)
      returns (SettlementStatusResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get = "/hyle/zktx/v1/settlement/{tx_hash}";
  }

  // Params returns the module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/hyle/zktx/v1/params";
  }
}

// SettlementStatusRequest is the request type for the Query/SettlementStatus
// RPC
message SettlementStatusRequest {
  // tx_hash defines the hash of the transaction to query for the settlement
  // status.
  bytes tx_hash = 1;
}

// SettlementStatusResponse is the response type for the Query/SettlementStatus
// RPC
message SettlementStatusResponse {
  // settled defines whether the payload has been settled or not.
  bool settled = 1;
  // success defines whether the payload is a success or failure
  bool success = 2;
}

// ContractRequest is the request type for the Query/Contract RPC
message ContractRequest {
  // contract_name defines the name to query for the contract.
  string contract_name = 1;
}

// ContractResponse is the response type for the Query/Contract RPC
message ContractResponse {
  // contract defines the current state of the contract.
  hyle.zktx.v1.Contract contract = 1 [ (gogoproto.nullable) = false ];
}

// ContractRequest is the request type for the Query/Contract RPC
message ContractListRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// ContractResponse is the response type for the Query/Contract RPC
message ContractListResponse {
  // contract defines the current state of the contract.
  repeated string contracts = 1;
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
